[tool.poetry]
name = "bootjtk"
version = "1.0.0"
description = "Bootstrap JTK analysis for circadian rhythm detection"
authors = [
    "Alan L. Hutchison <alanlhutchison@uchicago.edu>",
    "Alexander Crowell",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aleccrowell/BooteJTK-c"
repository = "https://github.com/aleccrowell/BooteJTK-c"
keywords = ["circadian", "rhythm", "JTK", "bootstrap", "bioinformatics", "chronobiology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "bootjtk"}]
include = [
    "bootjtk/ref_files/**/*",
    "bootjtk/*.R",
]

[tool.poetry.scripts]
bootejtk = "bootjtk.BooteJTK:cli"
bootejtk-calcp = "bootjtk.pipeline:cli"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.11.0"
scipy = ">=0.15.1"
pandas = ">=1.0.0"
matplotlib = ">=2.0.0"
statsmodels = ">=0.6.1"
setuptools = {version = ">=42", python = ">=3.9"}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0) ; python_version >= \"3.10\""
]
